<resources>
    <string name="app_name">MobileManager</string>


    //Login activity
    <string name="LoginActivity_UserName">Username</string>
    <string name="LoginActivity_Password">Password</string>
    <string name="LoginActivity_CreateAccount">Create Account</string>
    <string name="LoginActivity_LoginToGame">Sign into game</string>

    //Main activity
    <string name="activityMainPlayNextRound">Play Next Round</string>
    <string name="activityMainHeader">Short Information</string>
    <string name="activityMainCurrentBalance">Current Balance:</string>
    <string name="activityMainCurrentPower">Current Power:</string>
    <string name="activityMainCurrentNextMatch">Next Match:</string>
    <string name="activityMainCurrentLastMatch">Last Match:</string>

    //Finance activity
    <string name="activityFinanceAccount">Account Balance: </string>
    <string name="activityFinanceTransferBudget">Transfer Budget: </string>
    <string name="activityFinanceWageBudget">Wage Budget: </string>
    <string name="activityFinanceCurrentWage">Current Wage Total: </string>
    <string name="activityFinanceMaxWage">Maximum Wage: </string>
    <string name="activityFinanceCurrentMaxWage">Current Max Wage: </string>
    <string name="activityFinanceHeader">Club Finance</string>

    //Calendar activity
    <string name="activityCalendarHeader">Calendar</string>
    <string name="activityCalendarLastMatch">Last Match:</string>
    <string name="activityCalendarNextMatches">Next Match:</string>
    <string name="activityCalendarLastResults">Last 3 results:</string>

    //Results activity
    <string name="activityResultsCurrentTable">Current Table:</string>

    //Team activity
    <string name="activityTeamPlayers">Current Players List:</string>
    <string name="activityTeamPlayersMarket">Go To Players Market</string>
    <string name="activityTeamPlayersFoundByScouts">Go To Players Found By Scouts</string>
    <string name="activityTeamStyle">Style: </string>

    //Stadium activity
    <string name="activityStadiumGoToStadium">Go To Stadium</string>
    <string name="activityStadiumGoToScouting">Go To Scouting</string>

    //DetailStadium activity
    <string name="activityDetailStadiumHeader">Stadium</string>
    <string name="activityDetailStadiumCurrentLevel">Current Level:</string>
    <string name="activityDetailStadiumSeatsAmount">Seats:</string>
    <string name="activityDetailStadiumUpgradeCost">Update Cost (+1):</string>
    <string name="activityDetailStadiumUpgradeStadium">Upgrade Stadium</string>
    <string name="activityDetailStadiumTicketPrice">Ticket price:</string>
    <string name="activityDetailStadiumRaiseTicketPrice">Raise Ticket Price</string>

    //DetailScouting activity
    <string name="activityDetailScoutingHeader">Scouting</string>
    <string name="activityDetailScoutingCurrentLevel">Current Level:</string>
    <string name="activityDetailScoutingUpdateCost">Update Cost (+1):</string>
    <string name="activityDetailScoutingUpgradeScouting">Upgrade Scouting</string>
    <string name="activityDetailScoutingFindPlayer">Find Another</string>
    <string name="activityDetailScoutingUnitaryCost">Unitary Finding Cost:</string>
    <string name="activityDetailScoutingBuyPlayer">Buy This One!</string>

    //DetailPlayer
    <string name="activityDetailPlayerName">Name:</string>
    <string name="activityDetailPlayerNumber">Number:</string>
    <string name="activityDetailPlayerPosition">Position:</string>
    <string name="activityDetailPlayerValue">Value:</string>
    <string name="activityDetailPlayerWage">Wage:</string>
    <string name="activityDetailPlayerGkSkills">GK Skills:</string>
    <string name="activityDetailPlayerDefSkills">Def Skills:</string>
    <string name="activityDetailPlayerAttSkills">Att Skills:</string>
    <string name="activityDetailPlayerSellPlayer">Sell Player</string>
    <string name="activityDetailPlayerCloseBtn">Close</string>

    //DetailResults
    <string name="activityLastRoundSeeTable">See TableScore</string>
    <string name="activityLastRoundClose">Close</string>


</resources>
