<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <ImageView
        android:id="@+id/loginActivityDrawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_activity_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginActivityUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="5dp"
        android:ems="10"
        android:hint="@string/LoginActivity_UserName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF"
        android:alpha="0.8"/>

    <EditText
        android:id="@+id/loginActivityPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:ems="10"
        android:hint="@string/LoginActivity_Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityUserName"
        android:background="#FFFFFF"
        android:alpha="0.8"/>

    <Button
        android:id="@+id/loginActivityCreateAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:text="@string/LoginActivity_CreateAccount"
        app:layout_constraintEnd_toStartOf="@+id/loginActivityLoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityPassword" />

    <Button
        android:id="@+id/loginActivityLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/LoginActivity_LoginToGame"
        app:layout_constraintBottom_toBottomOf="@+id/loginActivityCreateAccountBtn"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.500684" />



</android.support.constraint.ConstraintLayout>