<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/activityDetailScoutingUpgrade"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/activityDetailScoutingUpgradeScouting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailScoutingUnitCost" />

    <Button
        android:id="@+id/activityDetailScoutingFindAnother"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/activityDetailScoutingFindPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailScoutingFoundPlayer" />

    <Button
        android:id="@+id/activityDetailScoutingBuyPlayer"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/activityDetailScoutingBuyPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailScoutingUpgrade" />

    <TextView
        android:id="@+id/activityDetailScoutingLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="190dp"
        android:padding="5dp"
        android:text="level"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDetailScouting1" />

    <TextView
        android:id="@+id/activityDetailScoutingUpgradeCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:padding="5dp"
        android:text="upgrade cost"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDetailScouting2" />

    <TextView
        android:id="@+id/activityDetailScoutingUnitCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:padding="5dp"
        android:text="unitary cost"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDetailScoutingUnitaryCost" />

    <TextView
        android:id="@+id/activityDetailScouting1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/activityDetailScoutingCurrentLevel"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/activityDetailScouting"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/activityDetailScouting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/activityDetailScoutingUpdateCost"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/activityDetailScouting"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailScouting1" />

    <TextView
        android:id="@+id/activityDetailScoutingUnitaryCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/activityDetailScoutingUnitaryCost"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/activityDetailScouting"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailScouting2" />

    <TextView
        android:id="@+id/activityDetailScoutingFoundPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="Found player: (attacker) [0,0,0]"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailScoutingBuyPlayer" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailStadiumImageView2"
        app:srcCompat="@drawable/stadium" />

    <ImageView
        android:id="@+id/activityDetailStadiumImageView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/activityDetailScouting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/activityDetailStadiumHeader"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDetailStadiumImageView2" />

</android.support.constraint.ConstraintLayout>