<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/activityTeamImageView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/activityTeamHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/activityTeamPlayers"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/activityTeamImageView"
        app:layout_constraintTop_toTopOf="@+id/activityTeamImageView" />

    <ListView
        android:id="@+id/activityTeamListView"
        android:layout_width="395dp"
        android:layout_height="421dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/playersFoundedByScouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityTeamImageView" />

    <Button
        android:id="@+id/playersFoundedByScouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/activityTeamPlayersFoundByScouts"
        app:layout_constraintBottom_toTopOf="@+id/playersMarket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playersMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/activityTeamPlayersMarket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>