<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/activityDetailStadiumImageView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailStadiumImageView"
        app:srcCompat="@drawable/stadium" />

    <TextView
        android:id="@+id/activityDetailStadiumHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/activityDetailStadiumHeader"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDetailStadiumImageView" />

    <TextView
        android:id="@+id/activityDetailStadiumHeader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/activityDetailStadiumCurrentLevel"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/activityDetailStadiumLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="level"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/activityDetailStadiumSeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:padding="5dp"
        android:text="seats"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDetailStadiumHeader3" />

    <TextView
        android:id="@+id/activityDetailStadiumTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:padding="5dp"
        android:text="ticket price"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDetailStadiumHeader4" />

    <TextView
        android:id="@+id/activityDetailStadiumUpdateCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:padding="5dp"
        android:text="update cost"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDetailStadiumHeader5" />

    <TextView
        android:id="@+id/activityDetailStadiumHeader3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/activityDetailStadiumSeatsAmount"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailStadiumHeader2" />

    <TextView
        android:id="@+id/activityDetailStadiumHeader4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/activityDetailStadiumTicketPrice"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailStadiumHeader3" />

    <TextView
        android:id="@+id/activityDetailStadiumHeader5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/activityDetailStadiumUpgradeCost"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailStadiumHeader4" />

    <Button
        android:id="@+id/activityDetailStadiumUpgradeStadium"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/activityDetailStadiumUpgradeStadium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDetailStadiumHeader5" />

</android.support.constraint.ConstraintLayout>